DSLToXDSL/src/main/scala/trap/dsl/antlrparser/src/DSLParser.java
// $ANTLR 3.4 src/DSL.g 2017-03-06 04:26:07
package trap.dsl.antlrparser.src;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class DSLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ATTR", "BOOLEAN", "COMMENT", "DECIMAL", "EQ", "ESC_SEQ", "EXPONENT", "GE", "GLOB", "GT", "HEX_DIGIT", "ID", "INT", "LE", "LT", "MAPPING", "NE", "OCTAL_ESC", "PATTERN", "REG", "STRING", "UNICODE_ESC", "WS", "'('", "')'", "'and'", "'as'", "'def'", "'find'", "'not'", "'or'", "'patterns'", "'where'", "'xor'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int ATTR=4;
    public static final int BOOLEAN=5;
    public static final int COMMENT=6;
    public static final int DECIMAL=7;
    public static final int EQ=8;
    public static final int ESC_SEQ=9;
    public static final int EXPONENT=10;
    public static final int GE=11;
    public static final int GLOB=12;
    public static final int GT=13;
    public static final int HEX_DIGIT=14;
    public static final int ID=15;
    public static final int INT=16;
    public static final int LE=17;
    public static final int LT=18;
    public static final int MAPPING=19;
    public static final int NE=20;
    public static final int OCTAL_ESC=21;
    public static final int PATTERN=22;
    public static final int REG=23;
    public static final int STRING=24;
    public static final int UNICODE_ESC=25;
    public static final int WS=26;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public DSLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public DSLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return DSLParser.tokenNames; }
    public String getGrammarFileName() { return "src/DSL.g"; }

     
        public static final String version = "1.0";
        @Override    
        public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
            String hdr = getErrorHeader(e);
            String msg = getErrorMessage(e, tokenNames);
            throw new RuntimeException(hdr + ": " + msg);
        }
        protected Object recoverFromMismatchedToken(IntStream input,
                                                    int ttype,
                                                    BitSet follow)
            throws RecognitionException
        {  
            throw new MismatchedTokenException(ttype, input);
        }


    public static class patterns_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "patterns"
    // src/DSL.g:44:1: patterns : 'patterns' ^ ID ( define | find )* EOF !;
    public final DSLParser.patterns_return patterns() throws RecognitionException {
        DSLParser.patterns_return retval = new DSLParser.patterns_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal1=null;
        Token ID2=null;
        Token EOF5=null;
        DSLParser.define_return define3 =null;

        DSLParser.find_return find4 =null;


        Object string_literal1_tree=null;
        Object ID2_tree=null;
        Object EOF5_tree=null;

        try {
            // src/DSL.g:44:9: ( 'patterns' ^ ID ( define | find )* EOF !)
            // src/DSL.g:44:11: 'patterns' ^ ID ( define | find )* EOF !
            {
            root_0 = (Object)adaptor.nil();


            string_literal1=(Token)match(input,35,FOLLOW_35_in_patterns78); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            string_literal1_tree = 
            (Object)adaptor.create(string_literal1)
            ;
            root_0 = (Object)adaptor.becomeRoot(string_literal1_tree, root_0);
            }

            ID2=(Token)match(input,ID,FOLLOW_ID_in_patterns82); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            ID2_tree = 
            (Object)adaptor.create(ID2)
            ;
            adaptor.addChild(root_0, ID2_tree);
            }

            // src/DSL.g:44:27: ( define | find )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==31) ) {
                    alt1=1;
                }
                else if ( (LA1_0==32) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // src/DSL.g:44:28: define
            	    {
            	    pushFollow(FOLLOW_define_in_patterns85);
            	    define3=define();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, define3.getTree());

            	    }
            	    break;
            	case 2 :
            	    // src/DSL.g:44:35: find
            	    {
            	    pushFollow(FOLLOW_find_in_patterns87);
            	    find4=find();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, find4.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            EOF5=(Token)match(input,EOF,FOLLOW_EOF_in_patterns91); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "patterns"


    public static class find_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "find"
    // src/DSL.g:45:1: find : 'find' PATTERN ( MAPPING )* ( filter )? -> ^( 'find' ^( PATTERN ( filter )? ) ( MAPPING )* ) ;
    public final DSLParser.find_return find() throws RecognitionException {
        DSLParser.find_return retval = new DSLParser.find_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal6=null;
        Token PATTERN7=null;
        Token MAPPING8=null;
        DSLParser.filter_return filter9 =null;


        Object string_literal6_tree=null;
        Object PATTERN7_tree=null;
        Object MAPPING8_tree=null;
        RewriteRuleTokenStream stream_PATTERN=new RewriteRuleTokenStream(adaptor,"token PATTERN");
        RewriteRuleTokenStream stream_MAPPING=new RewriteRuleTokenStream(adaptor,"token MAPPING");
        RewriteRuleTokenStream stream_32=new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleSubtreeStream stream_filter=new RewriteRuleSubtreeStream(adaptor,"rule filter");
        try {
            // src/DSL.g:45:5: ( 'find' PATTERN ( MAPPING )* ( filter )? -> ^( 'find' ^( PATTERN ( filter )? ) ( MAPPING )* ) )
            // src/DSL.g:45:11: 'find' PATTERN ( MAPPING )* ( filter )?
            {
            string_literal6=(Token)match(input,32,FOLLOW_32_in_find102); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_32.add(string_literal6);


            PATTERN7=(Token)match(input,PATTERN,FOLLOW_PATTERN_in_find104); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_PATTERN.add(PATTERN7);


            // src/DSL.g:45:26: ( MAPPING )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==MAPPING) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // src/DSL.g:45:26: MAPPING
            	    {
            	    MAPPING8=(Token)match(input,MAPPING,FOLLOW_MAPPING_in_find106); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_MAPPING.add(MAPPING8);


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            // src/DSL.g:45:35: ( filter )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==36) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // src/DSL.g:45:35: filter
                    {
                    pushFollow(FOLLOW_filter_in_find109);
                    filter9=filter();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_filter.add(filter9.getTree());

                    }
                    break;

            }


            // AST REWRITE
            // elements: PATTERN, filter, 32, MAPPING
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 45:43: -> ^( 'find' ^( PATTERN ( filter )? ) ( MAPPING )* )
            {
                // src/DSL.g:45:46: ^( 'find' ^( PATTERN ( filter )? ) ( MAPPING )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                stream_32.nextNode()
                , root_1);

                // src/DSL.g:45:55: ^( PATTERN ( filter )? )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot(
                stream_PATTERN.nextNode()
                , root_2);

                // src/DSL.g:45:65: ( filter )?
                if ( stream_filter.hasNext() ) {
                    adaptor.addChild(root_2, stream_filter.nextTree());

                }
                stream_filter.reset();

                adaptor.addChild(root_1, root_2);
                }

                // src/DSL.g:45:74: ( MAPPING )*
                while ( stream_MAPPING.hasNext() ) {
                    adaptor.addChild(root_1, 
                    stream_MAPPING.nextNode()
                    );

                }
                stream_MAPPING.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "find"


    public static class define_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "define"
    // src/DSL.g:46:1: define : 'def' PATTERN 'as' patternmatcher -> ^( 'def' ^( PATTERN patternmatcher ) ) ;
    public final DSLParser.define_return define() throws RecognitionException {
        DSLParser.define_return retval = new DSLParser.define_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal10=null;
        Token PATTERN11=null;
        Token string_literal12=null;
        DSLParser.patternmatcher_return patternmatcher13 =null;


        Object string_literal10_tree=null;
        Object PATTERN11_tree=null;
        Object string_literal12_tree=null;
        RewriteRuleTokenStream stream_PATTERN=new RewriteRuleTokenStream(adaptor,"token PATTERN");
        RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
        RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleSubtreeStream stream_patternmatcher=new RewriteRuleSubtreeStream(adaptor,"rule patternmatcher");
        try {
            // src/DSL.g:46:7: ( 'def' PATTERN 'as' patternmatcher -> ^( 'def' ^( PATTERN patternmatcher ) ) )
            // src/DSL.g:46:9: 'def' PATTERN 'as' patternmatcher
            {
            string_literal10=(Token)match(input,31,FOLLOW_31_in_define132); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_31.add(string_literal10);


            PATTERN11=(Token)match(input,PATTERN,FOLLOW_PATTERN_in_define134); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_PATTERN.add(PATTERN11);


            string_literal12=(Token)match(input,30,FOLLOW_30_in_define136); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_30.add(string_literal12);


            pushFollow(FOLLOW_patternmatcher_in_define138);
            patternmatcher13=patternmatcher();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_patternmatcher.add(patternmatcher13.getTree());

            // AST REWRITE
            // elements: PATTERN, patternmatcher, 31
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 46:43: -> ^( 'def' ^( PATTERN patternmatcher ) )
            {
                // src/DSL.g:46:46: ^( 'def' ^( PATTERN patternmatcher ) )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                stream_31.nextNode()
                , root_1);

                // src/DSL.g:46:54: ^( PATTERN patternmatcher )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot(
                stream_PATTERN.nextNode()
                , root_2);

                adaptor.addChild(root_2, stream_patternmatcher.nextTree());

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "define"


    public static class simplematcher_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "simplematcher"
    // src/DSL.g:47:1: simplematcher : PATTERN ^ ( filter )? ;
    public final DSLParser.simplematcher_return simplematcher() throws RecognitionException {
        DSLParser.simplematcher_return retval = new DSLParser.simplematcher_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token PATTERN14=null;
        DSLParser.filter_return filter15 =null;


        Object PATTERN14_tree=null;

        try {
            // src/DSL.g:47:14: ( PATTERN ^ ( filter )? )
            // src/DSL.g:47:16: PATTERN ^ ( filter )?
            {
            root_0 = (Object)adaptor.nil();


            PATTERN14=(Token)match(input,PATTERN,FOLLOW_PATTERN_in_simplematcher156); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            PATTERN14_tree = 
            (Object)adaptor.create(PATTERN14)
            ;
            root_0 = (Object)adaptor.becomeRoot(PATTERN14_tree, root_0);
            }

            // src/DSL.g:47:25: ( filter )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==36) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // src/DSL.g:47:25: filter
                    {
                    pushFollow(FOLLOW_filter_in_simplematcher159);
                    filter15=filter();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, filter15.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "simplematcher"


    public static class patternmatcher_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "patternmatcher"
    // src/DSL.g:48:1: patternmatcher : ( simplematcher | ( '{' ! complexmatcher '}' !) );
    public final DSLParser.patternmatcher_return patternmatcher() throws RecognitionException {
        DSLParser.patternmatcher_return retval = new DSLParser.patternmatcher_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal17=null;
        Token char_literal19=null;
        DSLParser.simplematcher_return simplematcher16 =null;

        DSLParser.complexmatcher_return complexmatcher18 =null;


        Object char_literal17_tree=null;
        Object char_literal19_tree=null;

        try {
            // src/DSL.g:48:15: ( simplematcher | ( '{' ! complexmatcher '}' !) )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==PATTERN) ) {
                alt5=1;
            }
            else if ( (LA5_0==38) ) {
                alt5=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // src/DSL.g:48:17: simplematcher
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_simplematcher_in_patternmatcher166);
                    simplematcher16=simplematcher();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, simplematcher16.getTree());

                    }
                    break;
                case 2 :
                    // src/DSL.g:48:33: ( '{' ! complexmatcher '}' !)
                    {
                    root_0 = (Object)adaptor.nil();


                    // src/DSL.g:48:33: ( '{' ! complexmatcher '}' !)
                    // src/DSL.g:48:34: '{' ! complexmatcher '}' !
                    {
                    char_literal17=(Token)match(input,38,FOLLOW_38_in_patternmatcher171); if (state.failed) return retval;

                    pushFollow(FOLLOW_complexmatcher_in_patternmatcher174);
                    complexmatcher18=complexmatcher();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, complexmatcher18.getTree());

                    char_literal19=(Token)match(input,39,FOLLOW_39_in_patternmatcher176); if (state.failed) return retval;

                    }


                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "patternmatcher"


    public static class complexmatcher_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "complexmatcher"
    // src/DSL.g:49:1: complexmatcher : patternmatcher boolMatcher ^ patternmatcher ;
    public final DSLParser.complexmatcher_return complexmatcher() throws RecognitionException {
        DSLParser.complexmatcher_return retval = new DSLParser.complexmatcher_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        DSLParser.patternmatcher_return patternmatcher20 =null;

        DSLParser.boolMatcher_return boolMatcher21 =null;

        DSLParser.patternmatcher_return patternmatcher22 =null;



        try {
            // src/DSL.g:49:15: ( patternmatcher boolMatcher ^ patternmatcher )
            // src/DSL.g:49:17: patternmatcher boolMatcher ^ patternmatcher
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_patternmatcher_in_complexmatcher184);
            patternmatcher20=patternmatcher();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, patternmatcher20.getTree());

            pushFollow(FOLLOW_boolMatcher_in_complexmatcher186);
            boolMatcher21=boolMatcher();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) root_0 = (Object)adaptor.becomeRoot(boolMatcher21.getTree(), root_0);

            pushFollow(FOLLOW_patternmatcher_in_complexmatcher189);
            patternmatcher22=patternmatcher();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, patternmatcher22.getTree());

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "complexmatcher"


    public static class filter_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "filter"
    // src/DSL.g:50:1: filter : 'where' ! '{' ! rule ^ '}' !;
    public final DSLParser.filter_return filter() throws RecognitionException {
        DSLParser.filter_return retval = new DSLParser.filter_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal23=null;
        Token char_literal24=null;
        Token char_literal26=null;
        DSLParser.rule_return rule25 =null;


        Object string_literal23_tree=null;
        Object char_literal24_tree=null;
        Object char_literal26_tree=null;

        try {
            // src/DSL.g:50:7: ( 'where' ! '{' ! rule ^ '}' !)
            // src/DSL.g:50:9: 'where' ! '{' ! rule ^ '}' !
            {
            root_0 = (Object)adaptor.nil();


            string_literal23=(Token)match(input,36,FOLLOW_36_in_filter195); if (state.failed) return retval;

            char_literal24=(Token)match(input,38,FOLLOW_38_in_filter198); if (state.failed) return retval;

            pushFollow(FOLLOW_rule_in_filter201);
            rule25=rule();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) root_0 = (Object)adaptor.becomeRoot(rule25.getTree(), root_0);

            char_literal26=(Token)match(input,39,FOLLOW_39_in_filter204); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "filter"


    public static class rule_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "rule"
    // src/DSL.g:51:1: rule : ( simplerule | complexrule );
    public final DSLParser.rule_return rule() throws RecognitionException {
        DSLParser.rule_return retval = new DSLParser.rule_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        DSLParser.simplerule_return simplerule27 =null;

        DSLParser.complexrule_return complexrule28 =null;



        try {
            // src/DSL.g:51:5: ( simplerule | complexrule )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ATTR) ) {
                switch ( input.LA(2) ) {
                case EQ:
                case NE:
                    {
                    switch ( input.LA(3) ) {
                    case BOOLEAN:
                        {
                        int LA6_10 = input.LA(4);

                        if ( (LA6_10==39) ) {
                            alt6=1;
                        }
                        else if ( (LA6_10==29||LA6_10==34) ) {
                            alt6=2;
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 6, 10, input);

                            throw nvae;

                        }
                        }
                        break;
                    case DECIMAL:
                        {
                        int LA6_11 = input.LA(4);

                        if ( (LA6_11==39) ) {
                            alt6=1;
                        }
                        else if ( (LA6_11==29||LA6_11==34) ) {
                            alt6=2;
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 6, 11, input);

                            throw nvae;

                        }
                        }
                        break;
                    case STRING:
                        {
                        int LA6_12 = input.LA(4);

                        if ( (LA6_12==39) ) {
                            alt6=1;
                        }
                        else if ( (LA6_12==29||LA6_12==34) ) {
                            alt6=2;
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 6, 12, input);

                            throw nvae;

                        }
                        }
                        break;
                    case INT:
                        {
                        int LA6_13 = input.LA(4);

                        if ( (LA6_13==39) ) {
                            alt6=1;
                        }
                        else if ( (LA6_13==29||LA6_13==34) ) {
                            alt6=2;
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 6, 13, input);

                            throw nvae;

                        }
                        }
                        break;
                    case PATTERN:
                        {
                        int LA6_14 = input.LA(4);

                        if ( (LA6_14==39) ) {
                            alt6=1;
                        }
                        else if ( (LA6_14==29||LA6_14==34) ) {
                            alt6=2;
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 6, 14, input);

                            throw nvae;

                        }
                        }
                        break;
                    case ATTR:
                        {
                        int LA6_15 = input.LA(4);

                        if ( (LA6_15==39) ) {
                            alt6=1;
                        }
                        else if ( (LA6_15==29||LA6_15==34) ) {
                            alt6=2;
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 6, 15, input);

                            throw nvae;

                        }
                        }
                        break;
                    default:
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 6, 3, input);

                        throw nvae;

                    }

                    }
                    break;
                case LT:
                    {
                    int LA6_4 = input.LA(3);

                    if ( (LA6_4==DECIMAL) ) {
                        int LA6_11 = input.LA(4);

                        if ( (LA6_11==39) ) {
                            alt6=1;
                        }
                        else if ( (LA6_11==29||LA6_11==34) ) {
                            alt6=2;
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 6, 11, input);

                            throw nvae;

                        }
                    }
                    else if ( (LA6_4==INT) ) {
                        int LA6_13 = input.LA(4);

                        if ( (LA6_13==39) ) {
                            alt6=1;
                        }
                        else if ( (LA6_13==29||LA6_13==34) ) {
                            alt6=2;
                        }
                        else {
                            if (state.backtracking>0) {state.failed=true; return retval;}
                            NoViableAltException nvae =
                                new NoViableAltException("", 6, 13, input);

                            throw nvae;
